<resources>
    <string name="map_api_key0">AIzaSyADrWqn5i08qk44_uWAbLcFDAXJ8TmSLbE</string>
    <string name="_DP_HOST_NAME">@string/DP_HOST_NAME</string>
    <string name="_DP_STORE_MESSAGE">@string/DP_STORE_MESSAGE</string>
    <string name="_DP_OFFER_MESSAGE">@string/DP_OFFER_MESSAGE</string>
    <string name="_DP_EVENT_MESSAGE">@string/DP_EVENT_MESSAGE</string>
    <string name="Home">Home</string>
    <string name="ManageThings">Manage Your Business</string>
    <string name="forgotpassword">&lt;u>Forgot password ?&lt;/u></string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="confirm">confirm</string>
    <string name="search">Search</string>
    <string name="options_exit">Exit</string>
    <string name="oups_no_item_found">Oups !! No item found</string>
    <string name="about">About Us </string>
    <string name="Favoris">Favorites</string>
    <string name="FindCustomers">People around me</string>
    <string name="About_us">About US</string>
    <string name="Settings">Settings</string>
    <string name="MapStores">Business locator</string>
    <string name="Login">Login</string>
    <string name="Logout">LogOut</string>
    <string name="parameter">Parameter</string>
    <string name="title_activity_map_marker_position">Map</string>
    <string name="close">Close</string>
    <string name="EventLike">My Events</string>
    <string name="categories">Categories</string>
    <string name="my_stores">"My stores</string>
    <string name="my_events">"My events</string>
    <string name="Categories">Categories</string>
    <string name="event_detail">Detail Event</string>
    <string name="event_button_participate">Participate</string>
    <string name="event_button_unparticipate">Participated</string>
    <string name="event_participation_popup">Participation successful !!</string>
    <string name="event_participation_canceled">Participation Canceled!</string>
    <string name="check_network">check your network</string>
    <string name="network_error">No Network! click to retry</string>
    <string name="check_nework">check your network connection</string>
    <string name="enable_network">Enable network connection in your device</string>
    <string name="get_photos">Pick photo from gallery </string>
    <string name="editProfile">Edit Profile</string>
    <string name="store_create_btn">Create store</string>
    <string name="store_to_far_map">Too far to display the route</string>
    <string name="store_call_error">Error in your phone call</string>
    <string name="store_title_detail">Store Detail</string>
    <string name="settings_notifications">NOTIFICATIONS</string>
    <string name="settings_app_infos">APPLICATION</string>
    <string name="settings_notification_offers">Receive a special offers notification</string>
    <string name="settings_notification_offers_title">Offers notifications</string>
    <string name="settings_notification_events">Receive notification when there is a event near you</string>
    <string name="settings_notification_events_title">Nearby events notifications</string>
    <string name="settings_notification_stores">Receive notification when there is a store near you</string>
    <string name="settings_notification_stores_title">Nearby stores notifications</string>
    <string name="settings_notification_messenger">Receive notification when there is new messages</string>
    <string name="settings_notification_messenger_title">Messenger notifications</string>
    <string name="settings_notification_distance_dis">%1$s KM</string>
    <string name="settings_app_infos_title">Version of application</string>
    <string name="insert_name_field">Full name </string>
    <string name="lessThan1km">Less than 1 km</string>
    <string name="MoreThan2km">+2 Km</string>
    <string name="MoreThan5km">+5 Km</string>
    <string name="MoreThan10km">+10 Km</string>
    <string name="description">Description</string>
    <string name="permission_disabled_notice">This app is designed to work with location permission if you cancel this permission you may subsequently find operating problems</string>
    <string name="signup_username">Pseudo</string>
    <string name="signup_number">Mobile number</string>
    <string name="signup_select_your_country">Select your country</string>
    <string name="login_username">Email or username</string>
    <string name="password_atleast_6_8_characters_long">Password</string>
    <string name="save">Save</string>
    <string name="find_new_neighbours">Find new neighbours</string>
    <string name="FromTo"><![CDATA[From <u>%1$s</u> to <u>%2$s</u>]]></string>
    <string name="youHaveDiscussions">You have %1$d discissions %2$d messages</string>
    <string name="youHaveMessage">You have new message</string>
    <string name="offerIn">Offer in %1$s</string>
    <string name="offers">Offers</string>
    <string name="reviews">Reviews (%1$s)</string>
    <string name="noOffers">No Offers</string>
    <string name="detailOffer">Detail offer</string>
    <string name="noReviews">No Reviews</string>
    <string name="nbrOffers">%1$d offers</string>
    <string name="addReview">Add Review</string>
    <string name="settings">Settings</string>
    <string name="pseudo">Pseudo</string>
    <string name="error">Error!</string>
    <string name="selectRating">Please select from 1 star to 5 star</string>
    <string name="pleaseWriteReview">Please write review</string>
    <string name="writeReview">Write review</string>
    <string name="thankYou">Thank you!</string>
    <string name="searchOn">Search</string>
    <string name="searchOnStores">Search on stores</string>
    <string name="searchOnOffers">Search on offers</string>
    <string name="searchOnEvents">Search on events</string>
    <string name="pconfirm">Password confirmation</string>
    <string name="email">Email</string>
    <string name="people_around_me">People around me</string>
    <string name="noDiscussion">No Discussion Found!</string>
    <string name="promo">PROMO</string>
    <string name="fileUploading">Uploading …</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="rateUs">Please rate on application</string>
    <string name="rateIt">Rate it</string>
    <string name="you_ve_already_reviewd">You have already add your review!</string>
    <string name="shared_text">%1$s - Only on %2$s \n %3$s</string>
    <string name="reload">Reload</string>
    <string name="mail">Mail</string>
    <string name="today">Today</string>
    <string name="Send_message">Send a message</string>
    <string name="create_an_account">Create an account</string>
    <string name="or">OR</string>
    <string name="Sign_in">Sign in</string>
    <string name="password_hint">Password</string>
    <string name="version">version :</string>
    <string name="phone">Phone</string>
    <string name="featured">Featured</string>
    <string name="app_privacy">Privacy Policy</string>
    <string name="app_term_of_uses">Terms of use</string>
    <string name="offer_start_at">Start at %1$s</string>
    <string name="offer_end_at">End at %1$s</string>
    <string name="offer_ended_at">Ended at %1$s</string>
    <string name="nbr_stores_message">%1$s stores</string>
    <string name="tab_stores">Stores</string>
    <string name="tab_offers">Offers</string>
    <string name="tab_events">Events</string>
    <string name="tab_inbox">Inbox</string>
    <string name="NO_RESULT">No result found</string>
    <string name="your_destination">Your Destination</string>
    <string name="refresh">Refresh</string>
    <string name="no_users">No users</string>
    <string name="settings_notification_upcomingevent">Receive a notification when there\'s a new upcoming event</string>
    <string name="settings_notification_upcomingevent_title" >Upcoming Event</string>
    <string name="sign_up">Sign up</string>
    <string name="upComingEventMessage" >Upcoming Event</string>
    <string name="upComingEventsMessage" >Upcoming Events soon</string>
    <string name="upcomingTag">Upcoming</string>
    <string name="myUpComingEvents">UpComing Events</string>
    <string name="chat_notification_title">You have a new message</string>
    <string name="authentification_error_msg">Username and Password are incorrect.</string>
    <string name="oneOffer">%1$d offer</string>
    <string name="gallery">Gallery</string>
    <string name="noImages">No Photos</string>
    <string name="enable_network_map_direction">Please enable your network</string>
    <string name="enable_gps_map_direction">Please enable your GPS first</string>
    <string name="eventIn">Event in</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="intro_slide_1_title">Quickly find Restaurant</string>
    <string name="intro_slide_1_description">Try different restaurants nearby , a map will guide you the route to get the most interesting offer deals </string>
    <string name="intro_slide_2_title">Upcoming Event</string>
    <string name="intro_slide_2_description">Attend events organized by some of your favorite stores , participate and get a push notification for the upcoming event </string>
    <string name="intro_slide_3_title">Stores Nearby</string>
    <string name="intro_slide_3_description"> Offers, promo, discount are always at your discretion to explore for each near store .</string>
    <string name="intro_slide_4_title">Rate your best store</string>
    <string name="intro_slide_4_description"> Explore feedbacks before patronizing any store and leave yours as well</string>
    <string name="store_not_exist">Sorry !! this store does not exist</string>
    <string name="alert_gps_dialog">You Need to allow access to location in order to use the app , please try again and hit OK </string>
    <string name="confirm_gps_relaunch">Try again</string>
    <string name="next">Next</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="less_than_1_km">Less than 1 km</string>
    <string name="noDiscussions">No Discussion</string>
    <string name="stores_near_by">Stores Near by</string>
    <string name="searching_for_stores_bearby">Searching for stores nearby</string>
    <string name="network_not_available">Couldn\'t load data from server</string>
    <string name="retry">Retry</string>
    <string name="MapStoresMenu">Geo Stores</string>
    <string name="review_title">Reviews</string>
    <string name="load_more">Load More</string>
    <string name="saved_messag">Saved</string>
    <string name="unsaved_message">Unsaved</string>
    <string name="logout_alert">Your account is logged out, that because your account is blocked or deleted\nMore information contact the admin</string>
    <string name="store_not_found">Not found!</string>
    <string name="notification">Notifications</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="spanish">Spanish</string>
    <string name="portuguese">Portuguese</string>
    <string name="geo">Geo</string>
    <string name="date">Date</string>
    <string name="msg_dialog_privacy_policy"> By using this App, you agree to be bound by the %1$s and %2$s .</string>
    <string name="privacy_and_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="official_website">Official website</string>
    <string name="offer_for">Offer for %1$s</string>
    <string name="offer_off">%1$s OFF</string>
    <string name="load_business">Load Business</string>
</resources>