<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/notification_action"
        android:icon="@drawable/ic_google_maps_white_24dp"
        android:orderInCategory="200"
        android:title=""
        android:visible="true"
        app:showAsAction="always" />-->

    <item
        android:id="@+id/search_icon"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="300"
        android:title=""
        app:showAsAction="always" />

    <item
        android:visible="true"
        android:id="@+id/messenger_action"
        android:title="Notifs"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always" />


    <item
        android:visible="true"
        android:id="@+id/notification_action"
        android:title="Notifs"
        app:actionLayout="@layout/menu_action_item_badge"
        app:showAsAction="always" />


    <item
        android:id="@+id/language_icon"
        android:title="@string/language"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/en_ln"
                android:title="@string/english" />
            <item
                android:id="@+id/es_ln"
                android:title="@string/spanish" />
            <item
                android:id="@+id/fr_ln"
                android:title="@string/french" />
            <item
                android:id="@+id/ar_ln"
                android:title="@string/arabic" />
            <item
                android:id="@+id/pt_ln"
                android:title="@string/portuguese" />
        </menu>
    </item>


</menu>