<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/no_internet_found"
                android:layout_width="wrap_content"
                android:layout_height="200dp"/>

        <TextView
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/text"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/network_not_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:background="@android:color/transparent"
            android:layout_marginTop="10dp"
            android:id="@+id/btn"
            android:text="@string/retry"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>