<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/content_my_store"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:src="@drawable/navigation_menu_background"
                    android:layout_width="132dp"
                    android:layout_height="132dp"
                    android:layout_gravity="center_horizontal" />

                <LinearLayout
                    android:gravity="center"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center">


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingBottom="5dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/login"
                        android:hint="@string/login_username"
                        android:textColorHint="@color/gray_field"
                        app:met_textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingBottom="5dp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"
                        android:id="@+id/password"
                        android:textColorHint="@color/gray_field"
                        app:met_textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red" />

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="@color/defaultWhiteColor"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/userbuttonstyle"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/Sign_in"
                        android:id="@+id/connect"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotpassword"
                        android:id="@+id/forgotpassword"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/or"
                        android:layout_gravity="center_horizontal" />

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:textColor="@color/defaultWhiteColor"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/userbuttonstyle"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/create_an_account"
                        android:id="@+id/signup"
                        android:layout_gravity="center_horizontal" />

                </LinearLayout>

            </LinearLayout>


    </LinearLayout>

    <include layout="@layout/loading_icon_manage" android:id="@+id/loading"/>
    <include layout="@layout/fragment_error_manage" android:id="@+id/error"/>
    <include layout="@layout/fragment_empty_list_manage" android:id="@+id/empty"/>








</LinearLayout>