<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/app_bar" layout="@layout/app_bar" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <!--<ImageView-->
                    <!--android:layout_marginTop="40dp"-->
                    <!--android:id="@+id/imageView"-->
                    <!--android:layout_width="132dp"-->
                    <!--android:layout_height="132dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:layout_marginBottom="10dp"-->
                    <!--android:src="@drawanavigation_menu_backgroundlash" />-->


                <LinearLayout
                    android:layout_marginTop="30dp"
                    android:id="@+id/infos_layout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.github.siyamed.shapeimageview.CircularImageView
                            android:id="@+id/userimage"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/profile_placeholder"
                            app:siBorderColor="#eeeeee"
                            app:siBorderWidth="2dp" />

                        <Button
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/defaultWhiteColor"
                            android:background="@drawable/userbuttonstyle"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:text="@string/get_photos"
                            android:id="@+id/getImage"
                            android:layout_gravity="center_vertical|center" />

                    </LinearLayout>


                    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
                        android:visibility="gone"
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_select_your_country"
                        android:padding="5dp"
                        app:met_textColorHint="@color/gray_field"
                        android:layout_marginBottom="5dp"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red"/>

                    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:weightSum="10">

                        <TextView
                            android:id="@+id/codeCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="N/A"
                            android:visibility="invisible"
                            android:textColor="#000"
                            android:textStyle="bold" />


                        <com.rengwuxian.materialedittext.MaterialEditText
                            android:id="@+id/mobile"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:enabled="false"
                            app:met_textColorHint="@color/gray_field"
                            android:hint="@string/signup_number"
                            android:inputType="phone"
                            android:textColor="@color/black"
                            app:met_baseColor="@color/black"
                            app:met_primaryColor="@color/colorPrimary"
                            app:met_errorColor="@color/red" />


                    </LinearLayout>


                    <Button
                        android:id="@+id/next"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:visibility="gone"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/userbuttonstyle"
                        android:text="Continue"
                        android:textColor="@color/defaultWhiteColor" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/connect_layout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/back"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="5dp"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:text="Back"
                        android:textColor="#000" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/email"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:maxLines="1"
                        app:met_textColorHint="@color/gray_field"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red"/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/name"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/insert_name_field"
                        android:maxLength="30"
                        android:lines="1"
                        android:maxLines="1"
                        app:met_textColorHint="@color/gray_field"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/login"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/signup_username"
                        android:maxLength="30"
                        android:lines="1"
                        android:maxLines="1"
                        app:met_textColorHint="@color/gray_field"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red" />

                    <!--<com.rengwuxian.materialedittext.MaterialEditText-->
                    <!--android:id="@+id/job"-->
                    <!--android:layout_width="300dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginBottom="5dp"-->
                    <!--android:drawablePadding="10dp"-->
                    <!--android:hint="@string/profession"-->
                    <!--android:maxLength="30"-->
                    <!--android:textSize="16sp"-->
                    <!--android:textColor="@color/gray"-->
                    <!--android:textColorHint="@color/gray"-->
                    <!--app:met_baseColor="@color/gray"-->
                    <!--app:met_primaryColor="@color/colorPrimary"-->
                    <!--app:met_errorColor="@color/red" />-->

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/password"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/password_atleast_6_8_characters_long"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLines="1"
                        app:met_textColorHint="@color/gray_field"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red"/>


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:visibility="gone"
                        android:id="@+id/cpassword"
                        android:layout_marginBottom="20dp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/pconfirm"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:maxLines="1"
                        app:met_textColorHint="@color/gray_field"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray_field"
                        app:met_baseColor="@color/black"
                        app:met_primaryColor="@color/colorPrimary"
                        app:met_errorColor="@color/red" />

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:id="@+id/save"
                        android:layout_width="300dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/userbuttonstyle"
                        android:text="@string/save"
                        android:textColor="@color/defaultWhiteColor" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


</LinearLayout>